--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #0A0A0A;
+  background-color: transparent;
   color: white;
 }
 
@@ -128,7 +128,7 @@ body {
   animation: skillFloat 12s ease-in-out infinite;
 }
 
-/* FORZAR PARTICULAS VISIBLES */
+
 .hero-particles {
   position: relative;
   z-index: 1;
@@ -164,46 +164,7 @@ body {
   to   { transform: translateY(-120px); }
 }
 
-.timeline {
-  position: relative;
-  margin-left: 2rem;
-}
 
-.timeline-line {
-  position: absolute;
-  left: 0.5rem;
-  top: 0;
-  width: 4px;
-  height: 100%;
-  background: linear-gradient(to bottom, #00e8ff55, #00e8ff00);
-  border-radius: 5px;
-}
-
-.timeline-step {
-  position: relative;
-  margin-bottom: 3rem;
-  padding-left: 2.5rem;
-}
-
-.timeline-dot {
-  position: absolute;
-  left: -0.1rem;
-  top: 0.3rem;
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  background: #ffffff;
-  border: 3px solid #00e8ff;
-  box-shadow: 0 0 10px #00e8ff;
-  transition: 0.3s ease;
-  opacity: 0.4;
-}
-
-.timeline-dot.active {
-  background: #00e8ff;
-  box-shadow: 0 0 15px #00e8ff;
-  opacity: 1;
-}
 
 .timeline-card {
   background: #E4FCFF;
@@ -219,14 +180,14 @@ body {
 }
 
 .timeline {
-  position: relative;
+  position:absolute;
 }
 
 .timeline-line {
   position: absolute;
-  left: 0.45rem;
+  left: 1.25 rem;
   top: 0;
-  width: 4px;
+  width: 3px;
   height: 100%;
   background: linear-gradient(to bottom, #00e8ff88, #00e8ff00);
   border-radius: 5px;
@@ -234,22 +195,22 @@ body {
 
 .timeline-step {
   position: relative;
-  margin-bottom: 3.5rem;
+  margin-bottom: 1.5rem;
   padding-left: 2.5rem;
 }
 
 .timeline-dot {
   position: absolute;
-  left: -0.15rem;
-  top: 0.4rem;
-  width: 16px;
-  height: 16px;
+  left: calc(0rem - 8px);  /* Centra el dot EXACTO en la línea */
+  top: 0.3rem;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
   background: #ffffff;
   border: 3px solid #00e8ff;
   box-shadow: 0 0 10px #00e8ff;
-  transition: 0.3s ease;
   opacity: 0.3;
+  transition: 0.3s ease;
 }
 
 .timeline-dot.active {
@@ -284,4 +245,14 @@ body {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+@keyframes pulse-slow {
+  0% { transform: scale(1); opacity: 0.6; }
+  50% { transform: scale(1.15); opacity: 0.9; }
+  100% { transform: scale(1); opacity: 0.6; }
+}
+
+.animate-pulse-slow {
+  animation: pulse-slow 8s ease-in-out infinite;
 }
